// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render green Button component 1`] = `
.c0 {
  min-width: 170px;
  border-radius: 15px;
  color: #FFFFFF;
  padding: 10px 25px;
  -webkit-transition-duration: .1s;
  transition-duration: .1s;
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  border: 4px solid #00AB00;
  background-color: #00AB00;
}

.c0:hover {
  background-color: #FFFFFF;
}

.c0:disabled {
  opacity: .5;
  border: 4px solid #808080;
  background-color: #808080;
}

.c0:disabled:hover {
  background-color: #808080;
  color: #FFFFFF;
  cursor: default;
}

.c0:hover {
  color: #00AB00;
}

@media (max-width:450px) {
  .c0 {
    min-width: auto;
    width: 100%;
  }
}

<button
  className="c0"
  color="green"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Go home
</button>
`;

exports[`Button component should render red Button component 1`] = `
.c0 {
  min-width: 170px;
  border-radius: 15px;
  color: #FFFFFF;
  padding: 10px 25px;
  -webkit-transition-duration: .1s;
  transition-duration: .1s;
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  border: 4px solid #FF0000;
  background-color: #FF0000;
}

.c0:hover {
  background-color: #FFFFFF;
}

.c0:disabled {
  opacity: .5;
  border: 4px solid #808080;
  background-color: #808080;
}

.c0:disabled:hover {
  background-color: #808080;
  color: #FFFFFF;
  cursor: default;
}

.c0:hover {
  background-color: #FFFFFF;
  color: #FF0000;
}

@media (max-width:450px) {
  .c0 {
    min-width: auto;
    width: 100%;
  }
}

<button
  className="c0"
  color="red"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Delete
</button>
`;
